--- a/mybatis03/pom.xml
+++ b/mybatis03/pom.xml
@@ -27,7 +27,16 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.49</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.10</version>
+    </dependency>
   </dependencies>
+
+
+
 
   <build>
     <resources>
